# autotools

./: .gitignore  Makefile.am  configure.ac  extra.am  extra.mk  main.c
subdir1/: Makefile.am  bar.c  foo.c  main.c
subdir2/: Makefile.am
subdir2/subdir3/: Makefile.am
